# WfdCamera_server

./: README.md
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/jareld/wfdcamera_server/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  videoplay.cpp
app/src/main/cpp/include/libavutil/: imgutils.h
app/src/main/java/com/example/jareld/wfdcamera_server/: CameraDataReciverTask.java  CameraUtil.java  DeviceAdapter.java  H264Codec.java  LogUtils.java  MainActivity.java  RxBus.java  UserEvent.java  VideoPlayer.java  WifiDerectBroadcastReceiver.java
app/src/main/res/layout/: activity_main.xml  recycle_item.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/jareld/wfdcamera_server/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
